<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/blue"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="190dp"
        android:layout_height="140dp"
        android:src="@drawable/music_player_icon_slash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_img"
        android:background="@color/splash_color"/>

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/playlist_name"
        android:contentDescription="@string/playlist_name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="140dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>

    <ImageButton
        android:id="@+id/playlistDeleteBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/delete_icon"
        app:tint="@color/blue"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="140dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"/>

</com.google.android.material.card.MaterialCardView>